@@ -1,30 +1,39 @@
-# My profile website
-[![CircleCI](https://circleci.com/gh/pine/profile-website/tree/master.svg?style=shield)](https://circleci.com/gh/pine/profile-website/tree/master)
-
-My profile website (Japanese)
+## My Profile
 
 ## Requirements
 
-- Java 8
+- JDK 11
 
-## Dependencies
+## Libraries
 
-- Scala 2.12.2
-- Play Framework 2.7.0
+- Spring Boot 2.x
 
 ## Getting started
 
-```
-$ java -version
-java version "1.8.0_131"
-Java(TM) SE Runtime Environment (build 1.8.0_131-b11)
-Java HotSpot(TM) 64-Bit Server VM (build 25.131-b11, mixed mode)
-
-$ ./sbt run
+```sh
+$ ./gradlew :app:bootRun
 ```
 
-## Status
-- https://stats.pine.moe/
+## Deployment
+
+```sh
+$ ./gradlew build
+$ heroku apps:create your-app
+$ heroku plugins:install java
+$ heroku config:set SPRING_PROFILES_ACTIVE=prod
+$ heroku config:set TZ=Asia/Tokyo
+$ heroku config:set 'JAVA_OPTS=-verbose:gc -Xlog:gc* -XX:+UseStringDeduplication'
+$ heroku deploy:jar --jar app/build/libs/app.jar --jdk 11
+```
+
+## Development
+### JDK
+For macOS users.
+
+```
+$ brew tap adoptopenjdk/openjdk
+$ brew cask install adoptopenjdk11
+```
 
 ## License
-MIT &copy; Pine Mizune
+MIT &copy; [Pine Mizune](https://profile.pine.moe/)
